文本长度细化，地图和图标更改

--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
   <body style="margin: 0">
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=3883b04e8a82c4d58c538a1f7d70034b	"></script>
   </body>
 </html>
